# P4_SceneLoading

./: CMakeLists.txt  CMakePresets.json  P4_Client.cpp  P4_SceneLoading.cpp  P4_SceneLoading.h  P4_Server.cpp
proto/: proto_compile.bat  sceneloader.proto
src_client/: P4_Client.cpp  camera.cpp  camera.h  gl_renderer.cpp  gl_renderer.h  model_loader.cpp  model_loader.h  scene_client.cpp  scene_client.h  scene_loader.cpp  scene_loader.h  scene_scheduler.cpp  scene_scheduler.h  scene_types.h
src_server/: P4_Server.cpp  P4_Server.h  scene_service_impl.cpp  scene_service_impl.h
